# tmux-agents

./: .gitignore  BACKLOG.md  CLAUDE.md  Makefile  README.md  agents.conf  install.sh  pyproject.toml  uninstall.sh
.claude/: settings.json
.claude/skills/debug-state/: SKILL.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: test.yml
config/: clipboard-copy  projects.toml.example  theme.toml.example
docs/: ARCHITECTURE.md
src/tmux_agents/: _ssh_framing.py  _ssh_pump_script.py  _ssh_relay_script.py  config.py  container.py  exec_cmd.py  logging_setup.py  overview.py  paths.py  phase.py  pickers.py  progress.py  provisioning.py  registry.py  ssh_forward.py  startup.py  state.py  theme.py  tmux.py  windows.py  worktree.py
tests/: README.md  conftest.py  test_agents_hooks_template.py  test_config.py  test_container.py  test_hook_snippets.py  test_kill.py  test_launcher.py  test_layout.py  test_logging_setup.py  test_multireporter.py  test_new.py  test_new_progress_integration.py  test_overview.py  test_overview_actions.py  test_overview_folds.py  test_overview_tui.py  test_paths.py  test_phase.py  test_pickers.py  test_progress.py  test_provisioning.py  test_pumpresult_render.py  test_rebuild.py  test_registry.py  test_rename.py  test_restore.py  test_restore_progress.py  test_smoke.py  test_ssh_forward.py  test_ssh_forward_result.py  test_ssh_framing.py  test_ssh_pump.py  test_ssh_relay.py  test_startup.py  test_state_tick.py  test_terminal.py  test_theme.py  test_tmux.py  test_vscode.py  (+3 more)
tests/fixtures/: projects_example.toml
(+14 files in other folders)
